# CC_Proj

./: .gitignore  CLAUDE.md  README.md  contract-reviewer.skill  main.py  pyproject.toml
.claude/rules/: git.md  python.rules.md
.claude/skills/nav-calculator/: SKILL.md  examples.md
contract-reviewer/: SKILL.md
contract-reviewer/evals/: evals.json
contract-reviewer/references/: findings_schema.md  review_principles.md
contract-reviewer/scripts/: extract_contract.py  generate_risk_report.py  highlight_contract.py
daily_git_history/: __init__.py  cli.py
daily_git_history/domain/: __init__.py  exceptions.py  models.py
daily_git_history/services/: __init__.py  git_log_reader.py  xlsx_writer.py
fund_nav/: __init__.py  __main__.py  app.py  logging_config.py
fund_nav/domain/: __init__.py  exceptions.py  models.py
fund_nav/services/: __init__.py  calculator.py  repository.py
fund_nav/ui/: __init__.py  app.py
tests/: conftest.py  test_calculator.py  test_cli.py  test_daily_git_history_models.py  test_git_log_reader.py  test_logging_config.py  test_models.py  test_repository.py  test_xlsx_writer.py
