[project]
name = "cc-proj"
version = "0.1.0"
description = "Fund NAV Workbench — 基金淨值計算桌面應用程式"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=5.2.2",
]

[project.scripts]
fund-nav = "fund_nav:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=fund_nav --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
omit = [
    "fund_nav/ui/*",
    "fund_nav/app.py",
    "fund_nav/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
